add_assign_roles and products_controller

--- a/Shop_app/Views/Shared/_Layout.cshtml
+++ b/Shop_app/Views/Shared/_Layout.cshtml
@@ -23,9 +23,9 @@
         {
             <div>
                 <a href="/" class="btn btn-primary">Home</a>
-                <a href="user/create" class="btn btn-primary">Register</a>
-                <a href="User/Login" class="btn btn-primary">Auth</a>
-                <a href="User/CreateRole" class="btn btn-primary">Create Role</a>
+                <a asp-controller="User" asp-action="Create" class="btn btn-primary">Register</a>
+                <a asp-controller="User" asp-action="Login" class="btn btn-primary">Auth</a>
+                <a asp-controller="User" asp-action="CreateRole" class="btn btn-primary">Create Role</a>
             </div>
         }
     </header>
