--- a/Shop_app/Views/User/Create.cshtml
+++ b/Shop_app/Views/User/Create.cshtml
@@ -1,6 +1,6 @@
 ﻿@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "Create Page";
     Layout = "_Layout";
 }
 <form asp-controller="User" asp-action="Create" method="post">
