--- a/Shop_app/Views/Products/Update.cshtml
+++ b/Shop_app/Views/Products/Update.cshtml
@@ -1,6 +1,35 @@
 ﻿@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@model Shop_app.Models.Product
 @{
     ViewData["Title"] = "Update Page";
     Layout = "_Layout";
 }
 <h3>Update Page</h3>
+<form class="d-flex justify-content-center align-items-center flex-column w-100" asp-controller="Products" asp-action="Update" method="post">
+    <div class="form-group w-50">
+        <label class="form-label m-1 p-1" asp-for="Id">Id:</label>
+        <input class="form-control" type="number" asp-for="Id" name="Id" />
+        <span asp-validation-for="Id"></span>
+    </div>
+
+    <div class="form-group w-50">
+        <label class="form-label m-1 p-1" asp-for="Name">Name:</label>
+        <input class="form-control" asp-for="Name" name="Name" type="text" />
+        <span asp-validation-for="Name"></span>
+    </div>
+
+    <div class="form-group w-50">
+        <label class="form-label m-1 p-1" asp-for="Price">Price:</label>
+        <input class="form-control" asp-for="Price" name="Price" type="text" step="0.01" />
+        <span asp-validation-for="Price"></span>
+    </div>
+
+    <div class="form-group w-50">
+        <label class="form-label m-1 p-1" asp-for="Description">Description:</label>
+        <input class="form-control" asp-for="Description" name="Description" type="text" />
+        <span asp-validation-for="Description"></span>
+    </div>
+
+    <input class="btn btn-warning m-3 w-25" type="submit" value="Update" />
+    <a asp-action="Index">Back to List</a>
+</form>
