--- a/Shop_app/Views/Products/Create.cshtml
+++ b/Shop_app/Views/Products/Create.cshtml
@@ -14,19 +14,19 @@
     <div class="form-group w-50">
         <label class="form-label m-1 p-1" asp-for="Name">Name:</label>
         <input class="form-control" asp-for="Name" name="Name" type="text" />
-        <span asp-validation-for="Name"></span>
+        <span asp-validation-for="Name" class="text-danger"></span>
     </div>
 
     <div class="form-group w-50">
         <label class="form-label m-1 p-1" asp-for="Price">Price:</label>
         <input class="form-control" asp-for="Price" name="Price" type="text" step="0.01" />
-        <span asp-validation-for="Price"></span>
+        <span asp-validation-for="Price" class="text-danger"></span>
     </div>
 
     <div class="form-group w-50">
         <label class="form-label m-1 p-1" asp-for="Description">Description:</label>
         <input class="form-control" asp-for="Description" name="Description" type="text" />
-        <span asp-validation-for="Description"></span>
+        <span asp-validation-for="Description" class="text-danger"></span>
     </div>
 
     <input class="btn btn-success m-3 w-25" type="submit" value="Create" />
