--- a/Shop_app/Views/Products/Delete.cshtml
+++ b/Shop_app/Views/Products/Delete.cshtml
@@ -10,7 +10,7 @@
     <div class="form-group w-50">
         <label class="form-label m-1 p-1" asp-for="Id">Id:</label>
         <input class="form-control" type="number" asp-for="Id" name="Id" />
-        <span asp-validation-for="Id"></span>
+        <span asp-validation-for="Id" class="text-danger"></span>
     </div>
     <input class="btn btn-danger m-3 w-25" type="submit" value="Delete" />
     <a asp-action="Index">Back to List</a>
